# Grupi-API

./: .dockerignore  .env.dev  .env.example  .gitignore  DEPLOYMENT.md  DOCKER.md  Dockerfile  Makefile  Pipfile  README.md  docker-compose-dev.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  nginx.conf  pyproject.toml  requirements.txt  schema.yml
GruPI/: asgi.py  settings.py  urls.py  views.py  wsgi.py
core/: adapters.py  admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/management/commands/: check_settings.py  import_polos.py
core/migrations/: 0001_initial.py  0002_alter_drp_nome.py  0002_auto_20250911_0052.py  0002_otp.py  0002_userprofile_eixo.py  0003_alter_customuser_id_alter_userprofile_id.py  0003_remove_otp_tried_count_otp_failed_attempts.py  0004_customuser_is_email_verified_and_more.py  0004_userprofile_tags.py
core/templates/: index.html  password_reset_otp_email.html  registration_otp_email.html
core/tests/: test_adapters.py  test_admin.py  test_managers.py  test_models.py  test_permissions.py  test_views.py
core/tests/test_serializers/: test_registration.py  test_tags.py  test_userprofileupdate.py
data/: drps.html  polos_univesp.html
dataset/: polos.json
docs/: CORS_CONFIG.md  README_DOCS.md  grupi.yaml  openapi.yaml  schema.yml
docs/collections/Bruno-v2/GruPI - API de Grupos de Projeto/: bruno.json  collection.bru
docs/collections/Bruno-v2/GruPI - API de Grupos de Projeto/Dados Acadêmicos/: Listar DRPs.bru  folder.bru  (+5 more)
docs/collections/bruno/GruPi/: bruno.json
docs/notes/: anotacoes.md
(+73 files in other folders)
